@@ -30,6 +30,8 @@ Enhancements:
 General Fixes:
 
 - Granmar's club wasn't treated as weapon
+- sentence of Griselda was spoken by hero
+- some magic staffs didn't show their mana bonus
 
 
 
